--- a/index.html
+++ b/index.html
@@ -51,6 +51,63 @@
           Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </p>
     </header>
-    <script src="./scripts/script.js"></script>
-  </body>
-</html>
+    <main class="main">
+            <section class="content-section">
+                <h2 class="section-title">Почему сосредоточиться так сложно</h2>
+                <article class="content-card">
+                    <h3 class="accent-bg">Многозадачность</h3>
+                    <p class="card__text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам? А дело в том, что её просто не существует. Исследователи <a href="#" class="text__link">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно.</p>
+                </article>
+                <article class="content-card">
+                    <h3 class="accent-bg">Дофамин</h3>
+                    <p class="card__text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга.</p>
+                </article>
+            </section>
+            <section class="content-section">
+                <h2 class="section-title">Что снижает концентрацию внимания?</h2>  
+                <article class="content-card">
+                    <h3 class="accent-bg">Стресс</h3>
+                    <p class="card__text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности.</p>
+                </article>
+                <article class="content-card">
+                    <h3 class="accent-bg">Еда</h3>
+                    <p class="card__text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит.</p>
+                </article>
+                <article class="content-card">
+                    <h3 class="accent-bg">Гаджеты</h3>
+                    <p class="card__text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами.</p>
+                </article>
+            </section>
+            <section class="content-section">
+                <h2 class="section-title">Как концентрироваться лучше, чем золотая рыбка</h2>
+                <p class="accent-bg subtitle">5 простых (на самом деле не очень) советов</p>                
+                <article class="content-card">
+                    <h4 class="accent-bg light-weight">Представьте небо и облака</h4>
+                    <p class="card__text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать.</p>
+                </article>                    
+                <article class="content-card">
+                    <h4 class="accent-bg light-weight">Включите музыку</h4>
+                    <p class="card__text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная.</p>
+                </article>                    
+                <article class="content-card">
+                    <h4 class="accent-bg light-weight">Прогуляйтесь</h4>
+                    <p class="card__text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="#" class="highlight-link">показал</a>, что созерцание природы повышает концентрацию.</p>
+                </article>                    
+                <article class="content-card">
+                    <h4 class="accent-bg light-weight">Хорошо ешьте</h4>
+                    <p class="card__text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови.</p>
+                </article>                   
+                <article class="content-card">
+                    <h4 class="accent-bg light-weight">Читайте</h4>
+                    <p class="card__text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд.</p>
+                </article>
+            </section>
+            <section class="gallery-section">
+                <h2 class="accent-bg">А можно в картинках?</h2>
+                <img src="./images/sunset.png" alt="Закат в горах" loading="lazy">
+                <img src="./images/ice-cream.png" alt="Мороженое" loading="lazy">
+                <img src="./images/tape.png" alt="Аудиокассета" loading="lazy">
+                <img src="./images/books.png" alt="Стопка книг" loading="lazy">
+                <img src="./images/street.png" alt="Японская улица" loading="lazy">
+            </section>
+        </main>
