--- a/index.html
+++ b/index.html
@@ -111,3 +111,9 @@
                 <img src="./images/street.png" alt="Японская улица" loading="lazy">
             </section>
         </main>
+        <footer class="footer decorated-zone">
+          <h2 class="footer__title">focus</h2>
+        </footer>
+        <script src="./scripts/script.js"></script>
+    </body>
+</html>
