--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <h1 class="header__topic-name">no focus</h1>
       <div class="header__grid-template">
         <p class="header__topic-description">
-          Что делать, когда не можешь делать ничего
+          Что делать, когда не можешь делать ничего<br />
           Или почему нам так сложно сконцентрироваться, особенно когда очень надо
         </p>
       </div>
